# KittyBot

./: .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  KittyBot.sln  README.md  conanfile.txt  docker-compose.yml  secrets.json.example  vcpkg.json
KittyBot/: Dockerfile  KittyBot.cs  KittyBot.csproj  Service.cs  Startup.cs
KittyBot/Headers/: parse_env.h  util.h
KittyBot/Headers/Commands/: daily.h  kitty.h  manager.h  notes.h  ping.h  slash_command.h
KittyBot/Headers/Commands/Administrative/: add_coins.h  add_xp.h  enroll.h  notes_admin.h  remove_coins.h
KittyBot/Headers/Commands/Gambling/: Roulette.h  dice.h  roulette.h
KittyBot/Headers/Commands/User/: uinfo.h
KittyBot/Headers/Models/: guild.h  user.h
KittyBot/Headers/Services/: api_service.h  api_service_response.h  db.h  db_init.h  nekosia.h  service.h  service_response.h  shared_services.h
KittyBot/Models/: Guild.cs  IDiscordEntity.cs  User.cs
KittyBot/Modules/: AdministrationCommands.cs  EconomyCommands.cs  TestCommands.cs
KittyBot/Properties/: launchSettings.json
KittyBot/Services/: KittyBotService.cs  PostgreService.cs
KittyBot/Sources/: main.cpp
KittyBot/Sources/Commands/: daily.cpp  kitty.cpp  manager.cpp  notes.cpp  ping.cpp  slash_command.cpp
KittyBot/Sources/Commands/Administrative/: add_coins.cpp  add_xp.cpp  enroll.cpp  notes_admin.cpp  remove_coins.cpp
KittyBot/Sources/Commands/Gambling/: dice.cpp  roulette.cpp
KittyBot/Sources/Commands/User/: uinfo.cpp
KittyBot/Sources/Services/: db.cpp  db_init.cpp  nekosia.cpp
